# sincerin-stellar

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  rust-toolchain.toml
.claude/agent-memory/security-reviewer/: MEMORY.md  finding-eje3-rpc-confirm-2026-06-23.md  finding-settler-txhash-2026-06-23.md  pattern-stellar-cli-exit-codes.md
.github/workflows/: bake-worker.yml
contracts/rollup/: Cargo.toml
contracts/rollup/src/: journal.rs  lib.rs  test.rs
contracts/rollup/tests/: journal_interop.rs
crates/zk-core/: Cargo.toml
crates/zk-core/src/: journal.rs  lib.rs  merkle.rs  note.rs  poseidon2.rs  poseidon2_constants.rs  witness.rs
crates/zk-core/tests/: crosscheck_poc.rs  crosscheck_poc_edge.rs
deployments/: testnet.json
deployments/artifacts/: pool-seed_two_leaves.patch  pool.wasm
docs/: params.md  proving-times.md  spike-n2.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: capture-demo.mjs  capture-landing.mjs  capture-proving.mjs  export-benchmark.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AggregationFlow.tsx  AggregationViz.tsx  BenchChart.tsx  CipherRipple.tsx  Counter.tsx  DataRow.tsx  EcosystemStrip.tsx  FlowField.tsx  Footer.tsx  Header.tsx  LivePulse.tsx  PipelineDiagram.tsx  ProofCrystal.tsx  Properties.tsx  RecentBatches.tsx  Reveal.tsx  SettleCard.tsx  StatusChip.tsx
frontend/src/lib/: api.ts  benchmark.test.ts  benchmark.ts  benchmarkChart.ts  evidence.ts  format.ts  note.ts  router.tsx  usePolling.ts  wallet.ts
frontend/src/pages/: Benchmarks.tsx  DemoApp.tsx  Landing.tsx  NotFound.tsx
frontend/src/styles/: app.css  base.css  landing.css  tokens.css
frontend/src/views/: ResultView.tsx  StatusView.tsx  SubmitView.tsx
golden/: n16_inputs.json  n2_inputs.json  n32_inputs.json  n8_inputs.json  poc_vectors.json  poc_vectors_edge.json
host/: Cargo.toml
host/src/: main.rs
host/tests/: guest_exec.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest-bench/: Cargo.toml
methods/guest-bench/src/: main.rs
methods/guest/src/: main.rs
methods/src/: lib.rs
scripts/: deploy_settle_n8.sh  deploy_testnet.sh  gpu_latency_check_n8.sh  proving_times.sh  seq_demo.sh  seq_http_demo.sh  seq_http_gate.sh  settle_testnet.sh  stopA_remote_prove.sh  verify_onchain.sh  vm_bake_sanity.sh
sequencer/: Cargo.toml  README.md
sequencer/src/: batch.rs  http.rs  lib.rs  main.rs  pipeline.rs  prover.rs  settler.rs  tests.rs  types.rs
worker/: Dockerfile  README.md  build-host.sh  build-in-container.sh  handler.py
