[package]
name    = "methods"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC Zero methods crate: exposes guest ELF + image ID to the host."

[lib]
crate-type = ["lib"]

[build-dependencies]
risc0-build = { workspace = true }

[dependencies]
# risc0-zkvm on the host side (full features) for ImageId type.
risc0-zkvm = { workspace = true }

# Tell risc0-build where the guests are. `guest` = the DEPLOYED depth-3 guest
# (image_id cbeab7aa…, bound on-chain). `guest-bench` = the PROVING-ONLY
# depth-3/4/5 guest used solely for the N=16/32 proving-time benchmark (never
# deployed; image_id may differ per depth). See methods/build.rs for why depth
# switching lives on a separate guest rather than a feature on the deployed one.
[package.metadata.risc0]
methods = ["guest", "guest-bench"]
