[package]
name    = "zk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
# no_std so this crate can be used by both the RISC Zero guest and the Soroban contract.
description = "Shared no_std primitives: Poseidon2-BN254, Merkle, note commitment/nullifier, journal codec."

[lib]
crate-type = ["lib"]

[features]
default = []
# Enable std for host-side use (tests, build scripts, host binary).
std = ["ark-bn254/std", "ark-ff/std"]

[dependencies]
# Arkworks BN254 scalar field — the SAME crate versions the PoC
# (`stellar-private-payments`) uses, so the Montgomery field arithmetic is
# byte-identical. default-features off keeps the crate no_std-compatible for
# the RISC Zero guest and the Soroban contract.
ark-bn254 = { version = "0.6.0", default-features = false, features = ["curve"] }
ark-ff    = { version = "0.6.0", default-features = false }

[dev-dependencies]
# Cross-check test (std) loads the frozen golden JSON produced by the PoC.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"
