# The guest is a standalone crate compiled by risc0-build with the RISC Zero
# toolchain.  It is NOT a member of the parent workspace — risc0-build
# discovers it via [package.metadata.risc0] methods = ["guest"] in methods/.
[workspace]

[package]
name    = "rollup-guest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "rollup-guest"
path = "src/main.rs"

[dependencies]
# AC5.2: EXACT pin to 3.0.5 (3.0.0 is yanked; 3.0.5 is the installed version).
# default-features = false + features = ["std"] is the correct guest config.
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }

# Shared validity primitives — Poseidon2/Merkle/note (byte-identical to the PoC,
# s1/02) + journal codec + guest I/O wire types. no_std; "witness" pulls serde.
# Path is relative to methods/guest/ → ../../crates/zk-core.
zk-core = { path = "../../crates/zk-core", default-features = false, features = ["witness"] }
